# wvu-ieng-331-m2-5

./: .gitignore  DESIGN.md  GRADE.md  README.md  pyproject.toml
sql/: data_quality.sql  late_delivery_analysis.sql  seller_performance.sql
src/wvu_ieng_331_m2_5/: pipeline.py  validation.py
