[project]
name = "wvu-ieng-331-m2-5"
version = "0.1.0"
description = "A Python project that analyzes the olist dataset using SQL and DuckDB."
readme = "README.md"
authors = [
    { name = "Lily Powell", email = "lcp00008@mix.wvu.edu" }
    ,{ name = "Olivia Donoghue", email = "ogd00007@mix.wvu.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.5.2",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[project.scripts]
wvu-ieng-331-m2-5 = "wvu_ieng_331_m2_5.pipeline:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
